# passive-listening-classifiers

./: .gitignore  README.md  download_models.sh  pyproject.toml
src/: GeneralClassificationService.py  RunAllClassificationServices.py  SampleClassificationService.py  SampleClassificationServiceMain.py  ShoppingClassificationService.py  WeatherClassificationService.py  WeatherClassificationServiceMain.py  WeatherClassifier.py  file_download.py  models.json
src/general_classifier/: general_classifier.py
src/notebooks/shopping_classifier/: Reminders_Classification_Module.ipynb  demo.ipynb
src/plp/proto/: Classification_pb2.py  Classification_pb2_grpc.py  Dashboard_pb2.py  Dashboard_pb2_grpc.py  PermissionDisplay_pb2.py  PermissionDisplay_pb2_grpc.py  PermissionPoll_pb2.py  PermissionPoll_pb2_grpc.py
src/plp/proto/proto/: Classification_pb2.py  Classification_pb2_grpc.py  Dashboard_pb2.py  Dashboard_pb2_grpc.py
src/shopping_classifier/: shopping_main.py  shopping_skill.py
src/weather_classifier/: classify_weather_trigger.py  triggers.txt  weather_classifier.py
src/weather_classifier/location_recognition/: README.md  context.txt  handle_qa_multiple_option.py  most_recent.txt  pipeline.py  remove_punc_and_stopwords.py  spacy_NER.py
